<resources>
    <string name="app_name">Book</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Menu</string>

    <string name="home">Home</string>
    <string name="subscribed">Subscribed</string>
    <string name="browse">Browse</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sortby">Sort by</string>
    <!-- Books -->
    <string name="toggle_turn_on">Subscribed</string>
    <string name="toggle_turn_off">Subscribe</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_readability">Readability</string>
    <string name="pref_nightmode">Night Mode</string>
    <string name="pref_other">Other</string>
    <string name="pref_textsize">Reader Text Size</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name"></string>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_notifications">Receive updates</string>

    <string name="pref_noti_summary">Receive updates on home screen when new chapters of subscribed books are translated. </string>

    <string name="title_activity_fullscreen">Reader</string>
    <string name="nightmode_description">Sets a dark background and light text for the reader.</string>
    <string name="textsize_description">Set text size for the reader.</string>
    <string name="loading_more_updates">Loading more updates...</string>
    <string name="no_updates">Subscribe to a book for updates.</string>

</resources>
