<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_readability">
    <SwitchPreference
        android:defaultValue="false"
        android:key="nightmode"
        android:title="@string/pref_nightmode" />

    <ListPreference
        android:title="@string/pref_textsize"
        android:key="textsize"
        android:entries="@array/pref_textsize_entries"
        android:entryValues="@array/pref_textsize_values"
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_other">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    </PreferenceCategory>

</PreferenceScreen>
