<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true" />
        <item
            android:id="@+id/nav_subscribed"
            android:icon="@drawable/ic_sub"
            android:title="@string/subscribed" />

        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/browse" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />

        <item android:title="You" >
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_account"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </menu>
        </item>

        <item
            android:id="@+id/invis"
            android:visible="false" />
    </group>

</menu>
